style(bug):underline image not showing

--- a/modules/BadgeCollection/badge.module.css
+++ b/modules/BadgeCollection/badge.module.css
@@ -39,7 +39,7 @@
   position: absolute;
   left: 0;
   bottom: -5px;
-  background-image: url("../../assets/BadgeCollection/badge-underline.svg");
+  background-image: url("/Images/badge-underline.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
